# Merix

./: .gitignore  Cargo.toml  LLAMA-COMPILE.md  PLAN.md  PLAN.md.old  README.md  TESTING_PLAN.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: integration.rs
crates/llama/: Cargo.toml
crates/llama/src/: lib.rs
crates/llama/tests/: integration.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/memory/tests/: integration.rs
crates/resources/: Cargo.toml
crates/resources/src/: lib.rs
crates/resources/tests/: integration.rs
crates/schemas/: Cargo.toml
crates/schemas/src/: lib.rs
crates/self-extension/: Cargo.toml
crates/self-extension/src/: lib.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: config.rs  lib.rs
crates/utilities/tests/: integration.rs
models/: Cargo.toml
models/src/: checkpoint.rs  lib.rs  session.rs  task.rs
schemas/: Cargo.toml
schemas/src/: lib.rs
tests/: benchmark.ps1  crash-recover-test.ps1  error.txt  run-all-tests.ps1  run-full-test.ps1  self-extend-test.ps1  test-cargo.ps1  test-cli.ps1  test-core.ps1  test-llama.ps1  test-memory.ps1  test-resources.ps1  test-resume.bat  test-smoke.ps1  test-utilities.ps1
