[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Saviornt"]
license = "Apache-2.0"
repository = "https://github.com/saviornt/Merix"
description = "Merix - Local-first self-extending AI runtime (PHASE 1)"
rust-version = "1.80"

[workspace]
members = [
    "crates/cli",
    "crates/utilities",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "chrono"] }
merix-utilities = { path = "crates/utilities" }
chrono = { version = "0.4", features = ["serde"] }
