[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Saviornt"]
license = "Apache-2.0"
repository = "https://github.com/saviornt/Merix"
description = "Merix - Local-first self-extending AI runtime"
readme = "README.md"
rust-version = "1.80"

[workspace]
members = [
    "crates/cli",
    "crates/utilities",
    "crates/schemas",
    "crates/memory",
    "crates/core",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "chrono"] }
merix-utilities = { path = "crates/utilities" }
merix-schemas = { path = "crates/schemas" }
merix-memory = { path = "crates/memory" }
merix-core = { path = "crates/core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
surrealdb = { version = "3.0", features = ["kv-rocksdb"] }
dashmap = { version = "6.1" }
async-trait = "0.1"
llama-cpp-2 = { version = "0.1", features = ["cuda"] }