[package]
name = "merix-schemas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared Rust structs for tasks, sessions, checkpoints, memory items, etc. (PHASE 1)"

[dependencies]
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
