[package]
name = "merix-schemas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Domain models for Merix PHASE 1 (Session, Task, Checkpoint, Skill)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true