[package]
name = "merix-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Minimal Control Interface (CLI) for Phase 1"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
merix-core = { path = "../core" }
merix-memory = { path = "../memory" }
merix-mcp = { path = "../mcp" }
merix-skills = { path = "../skills" }
merix-self-extension = { path = "../self-extension" }
merix-schemas = { path = "../../schemas" }
clap = { version = "4.5", features = ["derive"] }
uuid.workspace = true
serde_json.workspace = true
