[package]
name = "merix-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Local Model Runtime + Session + Task Execution System (PHASE 1)"

[dependencies]
merix-schemas = { path = "../../schemas" }
merix-utilities = { path = "../utilities" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
