[package]
name = "merix-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Local Model Runtime + Session + Task Execution System (PHASE 1)"

[dependencies]
merix-schemas = { workspace = true }
merix-utilities = { workspace = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true