[package]
name = "merix-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP Tooling System – permissioned, sandboxed tool execution (PHASE 1)"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
