[package]
name = "merix-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SurrealDB-backed persistent + Dashmap ethereal memory layer (PHASE 1)"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
dashmap.workspace = true
uuid.workspace = true
chrono.workspace = true
surrealdb.workspace = true
merix-schemas = { path = "../../schemas" }
tracing.workspace = true
serde_json.workspace = true
