[package]
name = "merix-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SurrealDB-backed persistent + Dashmap ethereal memory layer (PHASE 1)"

[dependencies]
anyhow.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
surrealdb.workspace = true
merix-schemas = { workspace = true }
merix-utilities = { workspace = true }