[package]
name = "merix-schemas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Domain models for Database & In-Memory data structures (Session, Task, Checkpoint, Skill, etc.)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
