[package]
name = "merix-self-extension"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Self-Extension Core – skill generation from task history (PHASE 1)"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
merix-skills = { path = "../skills" }
merix-core = { path = "../core" }
merix-memory = { path = "../memory" }
merix-mcp = { path = "../mcp" }
merix-schemas = { path = "../../schemas" }
serde_json.workspace = true
tracing.workspace = true
async-trait = "0.1"
