[package]
name = "merix-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Skills System – modular, versioned, installable capability units (PHASE 1)"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
merix-mcp = { path = "../mcp" }
merix-memory = { path = "../memory" }
merix-schemas = { path = "../../schemas" }
async-trait = "0.1"
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
