[package]
name = "merix-utilities"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared utilities (logging, etc.)"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
